
[TestRender/it_converts_a_single_post_into_HTML - 1]
<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <title>My amazing blog!</title>
  </head>
  <body>
    <nav role="navigation">
      <h1>Budding Gopher's blog</h1>
      <ul>
        <li><a href="/">home</a></li>
        <li><a href="/about">about</a></li>
        <li><a href="/archive">archive</a></li>
      </ul>
    </nav>
    
  <h1>hello world</h1>
  <p>This is a description</p>
  Tags:
  <ul>
      <li>go</li>
      <li>tdd</li>
  </ul>
  <h1 id="first-recipe">First recipe!</h1>

<p>Welcome to my <strong>amazing blog</strong>. I am going to write about my family recipes, and make sure I write a long, irrelevant and boring story about my family before you get to the actual instructions.</p>


    <footer>
      <ul>
        <li><a href="https://twitter.com/quii">Twitter</a></li>
        <li><a href="https://github.com/quii">GitHub</a></li>
      </ul>
    </footer>
  </body>
</html>

---

[TestRender/it_renders_an_index_of_posts - 1]
<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <title>My amazing blog!</title>
  </head>
  <body>
    <nav role="navigation">
      <h1>Budding Gopher's blog</h1>
      <ul>
        <li><a href="/">home</a></li>
        <li><a href="/about">about</a></li>
        <li><a href="/archive">archive</a></li>
      </ul>
    </nav>
    
  <ol>
      <li><a href="/post/hello-world">Hello World</a></li>
    
      <li><a href="/post/hello-world-2">Hello World 2</a></li>
    </ol>

    <footer>
      <ul>
        <li><a href="https://twitter.com/quii">Twitter</a></li>
        <li><a href="https://github.com/quii">GitHub</a></li>
      </ul>
    </footer>
  </body>
</html>

---
